added text to the header and hero and also added an image to the hero section. now about to add images and text to the middle section. the idea is to fill in as much html as possible before moving on to the CSS.

--- a/index.html
+++ b/index.html
@@ -7,29 +7,56 @@
     <body>
         <div class="header">
             <div class="headerlogo">
-
+                REY'S VAULT
             </div>
             <div class="headerlinks">
-
+                <ul>
+                    <li> <a> FACEBOOK </a></li>
+                    <li> <a> INSTAGRAM </a></li>
+                    <li> <a> TWITTER </a></li>
+                </ul>
             </div>
         </div>
         <div class="hero">
             <div class="awesome">
-
+                <div class=heromaintext>
+                    REY'S VAULT IS HERE FOR ALL YOUR HAIR NEEDS
+                </div>
+                <div class="herosubtext">
+                    Rey's Vault is a relative newcomer in the hair care business but in a very short amount of time we have definitely made a huge impact on the hairgame of our dedicated customers
+                </div>
+                <div class="herobutton">
+                    <button> CONTACT US TODAY</button>
+                </div>
             </div>
             <div class="image">
-
+                <img src="images/pexels-wallace-felipe-11578208.jpg" alt="an image of a black woman's hair" width="400" height="600">
             </div>
         </div>
         <div class="middle">
             <div class="info">
-
+                <div class="boximagetext">
+                    <img src="">
+                    <div> </div>
+                </div>
+                <div class="boximagetext">
+                    <img src="">
+                    <div> </div>
+                </div>
+                <div class="boximagetext">
+                    <img src="">
+                    <div> </div>
+                </div>
+                <div class="boximagetext">
+                    <img src="">
+                    <div> </div>
+                </div>
             </div>
             <div class="quote">
 
             </div>
             <div class="cta">
-                
+
             </div>
         </div>
         <div class="footer">
