added images to the middle section and added credits for said images to the README file

--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
         <div class="middle">
             <div class="info">
                 <div class="boximagetext">
-                    <img src="">
+                    <img src="images/pexels-abel-kayode-10850675.jpg" alt="beautiful black hair" width="200" height="200">
                     <div> </div>
                 </div>
                 <div class="boximagetext">
-                    <img src="">
+                    <img src="images/pexels-nyara-aquino-3108920.jpg" alt="another beautiful black hair" width="200" height="200">
                     <div> </div>
                 </div>
                 <div class="boximagetext">
-                    <img src="">
+                    <img src="images/pexels-elman-estrada-10207449.jpg" alt="a third image of beautiful black hair" width="200" height="200">
                     <div> </div>
                 </div>
                 <div class="boximagetext">
-                    <img src="">
+                    <img src="images/pexels-william-adams-11896287.jpg" alt="the last image of beautiful black hair" width="200" height="200">
                     <div> </div>
                 </div>
             </div>
