added images to the middle section and added credits for said images to the README file

--- a/index.html
+++ b/index.html
@@ -37,26 +37,41 @@
             <div class="info">
                 <div class="boximagetext">
                     <img src="images/pexels-abel-kayode-10850675.jpg" alt="beautiful black hair" width="200" height="200">
-                    <div> </div>
+                    <div> Your hair is our priority</div>
                 </div>
                 <div class="boximagetext">
                     <img src="images/pexels-nyara-aquino-3108920.jpg" alt="another beautiful black hair" width="200" height="200">
-                    <div> </div>
+                    <div> Our products are made from only natural sources</div>
                 </div>
                 <div class="boximagetext">
                     <img src="images/pexels-elman-estrada-10207449.jpg" alt="a third image of beautiful black hair" width="200" height="200">
-                    <div> </div>
+                    <div> We guarantee results or it's your money back</div>
                 </div>
                 <div class="boximagetext">
                     <img src="images/pexels-william-adams-11896287.jpg" alt="the last image of beautiful black hair" width="200" height="200">
-                    <div> </div>
+                    <div> We await your patronage</div>
                 </div>
             </div>
             <div class="quote">
-
+                <div class="mainquote">
+                    I love this product! It leaves my hair feeling so clean, as I have tried other types of shampoo that don't leave my hair feeling refreshed. Also, I have bought a few times from here. Enough to know that the first time wasn't a fluke.
+                </div>
+                <div class="quotername">
+                    - Joan
+                </div>
             </div>
             <div class="cta">
-
+                <div class="ctatext">
+                    <div class="ctamaintext">
+                        WHAT ARE YOU WAITING FOR?
+                    </div>
+                    <div class="ctasubtext">
+                        Click the button to contact us today and experience hair care like you've never seen before.
+                    </div>
+                </div>
+                <div class="ctabutton">
+                    <button> CONTACT US TODAY </button>
+                </div>
             </div>
         </div>
         <div class="footer">
