done with the footer and hence the html for now. onto the CSS

--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
                     <button> CONTACT US TODAY </button>
                 </div>
             </div>
-            
+
         </div>
         <div class="footer">
-
+            <div> CREATED </div> <div> BY </div> <div> OMOBUDE </div>
         </div>
     </body>
 </html>
