added some style to the header

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title> ODIN LANDING PAGE </title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div class="header">
@@ -10,7 +11,7 @@
                 REY'S VAULT
             </div>
             <div class="headerlinks">
-                <ul>
+                <ul class="headerlinks">
                     <li> <a> FACEBOOK </a></li>
                     <li> <a> INSTAGRAM </a></li>
                     <li> <a> TWITTER </a></li>
