i am having issues commiting successfully, i have styled the header and the hero for now, now moving to the middle section

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                     Rey's Vault is a relative newcomer in the hair care business but in a very short amount of time we have definitely made a huge impact on the hairgame of our dedicated customers
                 </div>
                 <div class="herobutton">
-                    <button> CONTACT US TODAY</button>
+                    <button class="herobutton"> CONTACT US TODAY</button>
                 </div>
             </div>
-            <div class="image">
+            <div class="heroimage">
                 <img src="images/pexels-wallace-felipe-11578208.jpg" alt="an image of a black woman's hair" width="400" height="600">
             </div>
         </div>
