added css to the middle section, not done yet

--- a/index.html
+++ b/index.html
@@ -37,25 +37,25 @@
         <div class="middle">
             <div class="info">
                 <div class="boximagetext">
-                    <img src="images/pexels-abel-kayode-10850675.jpg" alt="beautiful black hair" width="200" height="200">
-                    <div> Your hair is our priority</div>
+                    <img class="boximage" src="images/pexels-abel-kayode-10850675.jpg" alt="beautiful black hair" width="200" height="200">
+                    <div class="boxtext"> Your hair is our priority</div>
                 </div>
                 <div class="boximagetext">
-                    <img src="images/pexels-nyara-aquino-3108920.jpg" alt="another beautiful black hair" width="200" height="200">
-                    <div> Our products are made from only natural sources</div>
+                    <img class="boximage" src="images/pexels-nyara-aquino-3108920.jpg" alt="another beautiful black hair" width="200" height="200">
+                    <div class="boxtext"> Our products are made from only natural sources</div>
                 </div>
                 <div class="boximagetext">
-                    <img src="images/pexels-elman-estrada-10207449.jpg" alt="a third image of beautiful black hair" width="200" height="200">
-                    <div> We guarantee results or it's your money back</div>
+                    <img class="boximage" src="images/pexels-elman-estrada-10207449.jpg" alt="a third image of beautiful black hair" width="200" height="200">
+                    <div class="boxtext"> We guarantee results or it's your money back</div>
                 </div>
                 <div class="boximagetext">
-                    <img src="images/pexels-william-adams-11896287.jpg" alt="the last image of beautiful black hair" width="200" height="200">
-                    <div> We await your patronage</div>
+                    <img class="boximage" src="images/pexels-william-adams-11896287.jpg" alt="the last image of beautiful black hair" width="200" height="200">
+                    <div class="boxtext"> We await your patronage</div>
                 </div>
             </div>
             <div class="quote">
                 <div class="mainquote">
-                    I love this product! It leaves my hair feeling so clean, as I have tried other types of shampoo that don't leave my hair feeling refreshed. Also, I have bought a few times from here. Enough to know that the first time wasn't a fluke.
+                    <div> I love this product! It leaves my hair feeling so clean, as I have tried other types of shampoo that don't leave my hair feeling refreshed. Also, I have bought a few times from here. Enough to know that the first time wasn't a fluke.</div>
                 </div>
                 <div class="quotername">
                     - Joan
