about to style the final part of the middle section which is the call-to-action part

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             </div>
         </div>
         <div class="middle">
+            <div class="infotitle"> OUR PROMISES TO YOU </div>
             <div class="info">
                 <div class="boximagetext">
                     <img class="boximage" src="images/pexels-abel-kayode-10850675.jpg" alt="beautiful black hair" width="200" height="200">
@@ -50,7 +51,7 @@
                 </div>
                 <div class="boximagetext">
                     <img class="boximage" src="images/pexels-william-adams-11896287.jpg" alt="the last image of beautiful black hair" width="200" height="200">
-                    <div class="boxtext"> We await your patronage</div>
+                    <div class="boxtext"> You won't regret your patronage</div>
                 </div>
             </div>
             <div class="quote">
