added flex shrinkage and growth to the webpage sections

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
                 REY'S VAULT
             </div>
             <div class="headerlinks">
-                <ul class="headerlinks">
+                <ul class="headerlinkers">
                     <li> <a> FACEBOOK </a></li>
-                    <li> <a> INSTAGRAM </a></li>
+                    <li class="instagram"> <a> INSTAGRAM </a></li>
                     <li> <a> TWITTER </a></li>
                 </ul>
             </div>
@@ -27,7 +27,7 @@
                     Rey's Vault is a relative newcomer in the hair care business but in a very short amount of time we have definitely made a huge impact on the hairgame of our dedicated customers
                 </div>
                 <div class="herobutton">
-                    <button class="herobutton"> CONTACT US TODAY</button>
+                    <button class="herobuttoner"> CONTACT US TODAY</button>
                 </div>
             </div>
             <div class="heroimage">
@@ -55,11 +55,11 @@
                 </div>
             </div>
             <div class="quote">
-                <div class="mainquote">
-                    <div> I love this product! It leaves my hair feeling so clean, as I have tried other types of shampoo that don't leave my hair feeling refreshed. Also, I have bought a few times from here. Enough to know that the first time wasn't a fluke.</div>
+                <div class="wholequote"> <div class="mainquote">
+                 I love this product! It leaves my hair feeling so clean, as I have tried other types of shampoo that don't leave my hair feeling refreshed. Also, I have bought a few times from here. Enough to know that the first time wasn't a fluke.
                 </div>
                 <div class="quotername">
-                    - Joan
+                   <div class="joan"> - Joan </div> </div>
                 </div>
             </div>
             <div class="cta">
@@ -72,7 +72,7 @@
                     </div>
                 </div>
                 <div class="ctabutton">
-                    <button> CONTACT US TODAY </button>
+                    <button class="ctabuttoner"> CONTACT US TODAY </button>
                 </div>
             </div>
 
